@@ -70,9 +70,9 @@ static timings_t base_timings[] = {
   /* Pentagon */
   { 3584000, 1792000, 36, 128, 28, 32, 64, 192, 48, 16, 36, 17988 },
   /* +2A */
-  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 32, 14362 },
+  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 32, 14365 },
   /* +3 */
-  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 32, 14362 },
+  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 32, 14365 },
   /* Unknown machine */
   { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 },
   /* 16K */
@@ -82,7 +82,7 @@ static timings_t base_timings[] = {
   /* Scorpion */
   { 3500000, 1750000, 24, 128, 32, 40, 48, 192, 48, 24, 36, 14336 },
   /* +3e */
-  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 32, 14362 },
+  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 32, 14365 },
   /* SE */
   { 3500000, 1750000, 24, 128, 24, 48, 47, 192, 48, 25, 32, 14336 },
   /* TS2068 */
@@ -94,7 +94,7 @@ static timings_t base_timings[] = {
   /* 48K NTSC */
   { 3527500,       0, 24, 128, 24, 48, 24, 192, 25, 23, 32,  8960 },
   /* 128Ke */
-  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 32, 14362 },
+  { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 32, 14365 },
 };
 
 libspectrum_dword
